--- a/veiculos_gtav/veiculohp.css
+++ b/veiculos_gtav/veiculohp.css
@@ -19,7 +19,7 @@ html{
 body{
   height: 100vh;
   width: 100%;
-  background-image: url("./assets/background.png");
+  background-image: url("../Html/assets/background.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -349,13 +349,29 @@ figure img{
     width: 270px;
 }
 
+.copright p{
+  margin: 0px;
+  text-align: center;
+}
+
 footer {
+  padding-bottom: 10px;
   height: fit-content;
   grid-area: footer;
   width: 100%;
   margin: 0 auto;
-  border-top: 3px solid #f0e3be;
-  background-color: rgba(0, 0, 0, 1);
+  border-top: 2px solid #f0e3be;
+  background-color: rgba(0, 0, 0);
+}
+
+footer hr{
+  display: none;
+}
+
+footer a{
+  display: block;
+  color: white;
+  width: 100%;
 }
 
 footer ul {
@@ -363,7 +379,24 @@ footer ul {
   list-style-type: none;
   padding: 0px;
   margin: 0px;
-  padding-bottom: 15px;
+  align-items: center;
+}
+
+footer li{
+  margin-top: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+}
+
+footer li:hover{
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.copright p{
+  margin: 0px;
 }
   
   .sticky-element button{
