main page att 2 / ajustando bordas e letras

--- a/Html/index.css
+++ b/Html/index.css
@@ -166,7 +166,7 @@ h1 {
 }
 
 .imagens-jp {
-  border-radius: 10px;
+  border-radius: 5px;
   width: 40%;
   background-color: black;
   margin: 0 auto;
@@ -177,13 +177,14 @@ h1 {
 }
 
 .imagens-jp img {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   width: 100%;
   border-bottom: 1px solid #f0e3be;
 }
 
 .imagens-jp p {
+  text-align: center;
   padding-bottom: 0px;
 }
 
@@ -224,9 +225,9 @@ h1 {
 }
 
 .lado {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
   border: 1px solid #f0e3be;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
   grid-area: lado;
   background: rgba(0, 0, 0, 0.9);
   grid-column-start: 3;
@@ -255,6 +256,7 @@ h1 {
 }
 
 .lado h2 {
+  border-top-right-radius: 5px;
   border-bottom: 1px solid #f0e3be;
   background-color:  rgba(0, 0, 0, 0.6);
   font-size: 1.5rem;
@@ -263,7 +265,7 @@ h1 {
 }
 
 .lado .destaques h2 {
-  border-top-right-radius: 10px;
+  padding-top: 3px;
 }
 
 .lado>.destaques>li {
@@ -716,7 +718,7 @@ ul.criadores li:nth-child(2) {
     width: 80%;
     padding: 5px;
     border: 1px solid #f0e3be;
-    border-radius: 0px;
+    border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.5);
   }
 
@@ -742,7 +744,7 @@ ul.criadores li:nth-child(2) {
   }
 
   .lado>.destaques>li a {
-    border-radius: 0px;
+    border-radius: 5px;
     background-color: rgba(0,0,0,0.5);
     border: 1px solid #f0e3be;
     padding-top: 2px;
