--- a/veiculos_gtav/veiculohp.css
+++ b/veiculos_gtav/veiculohp.css
@@ -68,7 +68,6 @@ p, h1{
 #logo {
   font-size: 1.5rem;
   font-weight: bold;
-  font-family: "Pricedown";
   font-size: 2rem;
   color: white;
   text-shadow: 
@@ -112,7 +111,7 @@ p, h1{
   padding: 0.5rem;
   color: white;
   text-decoration: none;
-  font-family: "Pricedown";
+  font-family: 'Lilita One', cursive;
   font-size: 1.7rem;
   text-shadow: 
   -1px -1px 0px black, 
